--- a/AntonWang/WebApi/ApiDemo/Views/Shared/_Layout.cshtml
+++ b/AntonWang/WebApi/ApiDemo/Views/Shared/_Layout.cshtml
@@ -35,9 +35,10 @@
             <p>&copy; @DateTime.Now.Year - 我的 ASP.NET 应用程序</p>
         </footer>
     </div>
-
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+   
 </body>
 </html>
