--- a/AntonWang/WebApi/WebDemo/Views/Home/Index.cshtml
+++ b/AntonWang/WebApi/WebDemo/Views/Home/Index.cshtml
@@ -8,9 +8,27 @@
     <input type="button" value="Try it" onclick="sendRequest()" />
     <span id='value1'>(Result)</span>
 </div>
-
+    @functions
+  {
+       public string TokenHeaderValue()
+        {
+            string cookieToken, formToken;
+            AntiForgery.GetTokens(null, out cookieToken, out formToken);
+            return cookieToken + ":" + formToken;                
+        }
+    }
 @section scripts {
     <script>
+        $.ajax("http://localhost:5071/api/AntiCSRF/ValidateRequestHeader", {
+            type: "post",
+            contentType: "application/json",
+            data: {}, // JSON data goes here
+            dataType: "json",
+            headers: {
+                'RequestVerificationToken': '@TokenHeaderValue()'
+            }
+        });
+        
         // TODO: Replace with the URL of your WebService app
         var serviceUrl = 'http://localhost:3557/api/test/';
 
