--- a/AntonWang/Web/Demo.Web/Areas/Knockout/Views/Shared/_Layout.cshtml
+++ b/AntonWang/Web/Demo.Web/Areas/Knockout/Views/Shared/_Layout.cshtml
@@ -7,8 +7,9 @@
         <link href="~/javascript/bootstrap/bootstrap-responsive.min.css" rel="stylesheet" />
     </head>
     <body>
+        <br/>
+        <h4>&nbsp;&nbsp;<a href="/Knockout/Product">产品列表</a> &nbsp;&nbsp;<a href="http://localhost:5027/Knockout/Supplier">供应商列表列表</a></h4>
         @RenderBody()
-
     </body>
     <script src="~/javascript/jquery-1.10.2.min.js"></script>
     <script src="~/javascript/bootstrap/bootstrap.min.js"></script>
