--- a/AntonWang/Web/Demo.Web/Areas/Knockout/Views/Shared/_Layout.cshtml
+++ b/AntonWang/Web/Demo.Web/Areas/Knockout/Views/Shared/_Layout.cshtml
@@ -3,8 +3,10 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
          @RenderSection("title",false)
-        <link href="~/javascript/bootstrap/bootstrap.min.css" rel="stylesheet" />
-        <link href="~/javascript/bootstrap/bootstrap-responsive.min.css" rel="stylesheet" />
+     @*   <link href="~/Javascript/bootstrap/base.css" rel="stylesheet" />*@
+      @*  <link href="~/javascript/bootstrap/bootstrap.min.css" rel="stylesheet" />*@
+        <link href="~/Javascript/bootstrap/bootstrap.css" rel="stylesheet" />
+     @*   <link href="~/javascript/bootstrap/bootstrap-responsive.min.css" rel="stylesheet" />*@
     </head>
     <body>
         <br/>
